; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_mov.c_mov_read_saio.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_mov.c_mov_read_saio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_28__ = type { i32, %struct.TYPE_25__, %struct.TYPE_24__ }
%struct.TYPE_25__ = type { i64 }
%struct.TYPE_24__ = type { i64 }
%struct.TYPE_29__ = type { i64 }
%struct.TYPE_27__ = type { i32, i64, i8**, i64 }
%struct.TYPE_26__ = type { %struct.TYPE_23__ }
%struct.TYPE_23__ = type { %struct.TYPE_22__* }
%struct.TYPE_22__ = type { i32 }

@AV_LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"Ignoring duplicate encryption info in saio\0A\00", align 1
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"Duplicate saio atom\0A\00", align 1
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [47 x i8] c"Ignoring saio box with non-zero aux_info_type\0A\00", align 1
@.str.3 = private unnamed_addr constant [57 x i8] c"Ignoring saio box with non-zero aux_info_type_parameter\0A\00", align 1
@.str.4 = private unnamed_addr constant [38 x i8] c"Saw encrypted saio without schm/tenc\0A\00", align 1
@INT_MAX = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [28 x i8] c"Hit EOF while reading saio\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_28__*, %struct.TYPE_29__*, i32)* @mov_read_saio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mov_read_saio(%struct.TYPE_28__* %0, %struct.TYPE_29__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_28__*, align 8
  %6 = alloca %struct.TYPE_29__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8**, align 8
  %9 = alloca %struct.TYPE_27__*, align 8
  %10 = alloca %struct.TYPE_26__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store %struct.TYPE_28__* %0, %struct.TYPE_28__** %5, align 8
  store %struct.TYPE_29__* %1, %struct.TYPE_29__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %17, align 4
  %19 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %20 = call i32 @get_current_encryption_info(%struct.TYPE_28__* %19, %struct.TYPE_27__** %9, %struct.TYPE_26__** %10)
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %12, align 4
  %22 = icmp ne i32 %21, 1
  br i1 %22, label %23, label %25

23:                                               ; preds = %3
  %24 = load i32, i32* %12, align 4
  store i32 %24, i32* %4, align 4
  br label %253

25:                                               ; preds = %3
  %26 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %27 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %26, i32 0, i32 3
  %28 = load i64, i64* %27, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %36

30:                                               ; preds = %25
  %31 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* @AV_LOG_DEBUG, align 4
  %35 = call i32 @av_log(i32 %33, i32 %34, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %253

36:                                               ; preds = %25
  %37 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %38 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %48

41:                                               ; preds = %36
  %42 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = load i32, i32* @AV_LOG_ERROR, align 4
  %46 = call i32 @av_log(i32 %44, i32 %45, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %47 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %47, i32* %4, align 4
  br label %253

48:                                               ; preds = %36
  %49 = load %struct.TYPE_29__*, %struct.TYPE_29__** %6, align 8
  %50 = call i32 @avio_r8(%struct.TYPE_29__* %49)
  store i32 %50, i32* %13, align 4
  %51 = load %struct.TYPE_29__*, %struct.TYPE_29__** %6, align 8
  %52 = call i32 @avio_rb24(%struct.TYPE_29__* %51)
  %53 = and i32 %52, 1
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %55, label %120

55:                                               ; preds = %48
  %56 = load %struct.TYPE_29__*, %struct.TYPE_29__** %6, align 8
  %57 = call i8* @avio_rb32(%struct.TYPE_29__* %56)
  %58 = ptrtoint i8* %57 to i32
  store i32 %58, i32* %15, align 4
  %59 = load %struct.TYPE_29__*, %struct.TYPE_29__** %6, align 8
  %60 = call i8* @avio_rb32(%struct.TYPE_29__* %59)
  %61 = ptrtoint i8* %60 to i32
  store i32 %61, i32* %16, align 4
  %62 = load %struct.TYPE_26__*, %struct.TYPE_26__** %10, align 8
  %63 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %62, i32 0, i32 0
  %64 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %63, i32 0, i32 0
  %65 = load %struct.TYPE_22__*, %struct.TYPE_22__** %64, align 8
  %66 = icmp ne %struct.TYPE_22__* %65, null
  br i1 %66, label %67, label %92

67:                                               ; preds = %55
  %68 = load i32, i32* %15, align 4
  %69 = load %struct.TYPE_26__*, %struct.TYPE_26__** %10, align 8
  %70 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %69, i32 0, i32 0
  %71 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %70, i32 0, i32 0
  %72 = load %struct.TYPE_22__*, %struct.TYPE_22__** %71, align 8
  %73 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %72, i32 0, i32 0
  %74 = load i32, i32* %73, align 4
  %75 = icmp ne i32 %68, %74
  br i1 %75, label %76, label %82

76:                                               ; preds = %67
  %77 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %78 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %77, i32 0, i32 0
  %79 = load i32, i32* %78, align 8
  %80 = load i32, i32* @AV_LOG_DEBUG, align 4
  %81 = call i32 @av_log(i32 %79, i32 %80, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %253

82:                                               ; preds = %67
  %83 = load i32, i32* %16, align 4
  %84 = icmp ne i32 %83, 0
  br i1 %84, label %85, label %91

85:                                               ; preds = %82
  %86 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %87 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %86, i32 0, i32 0
  %88 = load i32, i32* %87, align 8
  %89 = load i32, i32* @AV_LOG_DEBUG, align 4
  %90 = call i32 @av_log(i32 %88, i32 %89, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %253

91:                                               ; preds = %82
  br label %119

92:                                               ; preds = %55
  %93 = load i32, i32* %15, align 4
  %94 = call i32 @MKBETAG(i8 signext 99, i8 signext 101, i8 signext 110, i8 signext 99)
  %95 = icmp eq i32 %93, %94
  br i1 %95, label %108, label %96

96:                                               ; preds = %92
  %97 = load i32, i32* %15, align 4
  %98 = call i32 @MKBETAG(i8 signext 99, i8 signext 101, i8 signext 110, i8 signext 115)
  %99 = icmp eq i32 %97, %98
  br i1 %99, label %108, label %100

100:                                              ; preds = %96
  %101 = load i32, i32* %15, align 4
  %102 = call i32 @MKBETAG(i8 signext 99, i8 signext 98, i8 signext 99, i8 signext 49)
  %103 = icmp eq i32 %101, %102
  br i1 %103, label %108, label %104

104:                                              ; preds = %100
  %105 = load i32, i32* %15, align 4
  %106 = call i32 @MKBETAG(i8 signext 99, i8 signext 98, i8 signext 99, i8 signext 115)
  %107 = icmp eq i32 %105, %106
  br i1 %107, label %108, label %118

108:                                              ; preds = %104, %100, %96, %92
  %109 = load i32, i32* %16, align 4
  %110 = icmp eq i32 %109, 0
  br i1 %110, label %111, label %118

111:                                              ; preds = %108
  %112 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %113 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %112, i32 0, i32 0
  %114 = load i32, i32* %113, align 8
  %115 = load i32, i32* @AV_LOG_ERROR, align 4
  %116 = call i32 @av_log(i32 %114, i32 %115, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0))
  %117 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %117, i32* %4, align 4
  br label %253

118:                                              ; preds = %108, %104
  store i32 0, i32* %4, align 4
  br label %253

119:                                              ; preds = %91
  br label %128

120:                                              ; preds = %48
  %121 = load %struct.TYPE_26__*, %struct.TYPE_26__** %10, align 8
  %122 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %121, i32 0, i32 0
  %123 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %122, i32 0, i32 0
  %124 = load %struct.TYPE_22__*, %struct.TYPE_22__** %123, align 8
  %125 = icmp ne %struct.TYPE_22__* %124, null
  br i1 %125, label %127, label %126

126:                                              ; preds = %120
  store i32 0, i32* %4, align 4
  br label %253

127:                                              ; preds = %120
  br label %128

128:                                              ; preds = %127, %119
  %129 = load %struct.TYPE_29__*, %struct.TYPE_29__** %6, align 8
  %130 = call i8* @avio_rb32(%struct.TYPE_29__* %129)
  %131 = ptrtoint i8* %130 to i32
  store i32 %131, i32* %14, align 4
  %132 = load i32, i32* %14, align 4
  %133 = zext i32 %132 to i64
  %134 = load i32, i32* @INT_MAX, align 4
  %135 = sext i32 %134 to i64
  %136 = udiv i64 %135, 8
  %137 = icmp uge i64 %133, %136
  br i1 %137, label %138, label %141

138:                                              ; preds = %128
  %139 = load i32, i32* @ENOMEM, align 4
  %140 = call i32 @AVERROR(i32 %139)
  store i32 %140, i32* %4, align 4
  br label %253

141:                                              ; preds = %128
  store i32 0, i32* %11, align 4
  br label %142

142:                                              ; preds = %220, %141
  %143 = load i32, i32* %11, align 4
  %144 = load i32, i32* %14, align 4
  %145 = icmp ult i32 %143, %144
  br i1 %145, label %146, label %152

146:                                              ; preds = %142
  %147 = load %struct.TYPE_29__*, %struct.TYPE_29__** %6, align 8
  %148 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %147, i32 0, i32 0
  %149 = load i64, i64* %148, align 8
  %150 = icmp ne i64 %149, 0
  %151 = xor i1 %150, true
  br label %152

152:                                              ; preds = %146, %142
  %153 = phi i1 [ false, %142 ], [ %151, %146 ]
  br i1 %153, label %154, label %223

154:                                              ; preds = %152
  %155 = load i32, i32* %11, align 4
  %156 = add nsw i32 %155, 1
  %157 = call i32 @FFMAX(i32 %156, i32 1024)
  %158 = load i32, i32* %14, align 4
  %159 = call i32 @FFMIN(i32 %157, i32 %158)
  store i32 %159, i32* %18, align 4
  %160 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %161 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %160, i32 0, i32 2
  %162 = load i8**, i8*** %161, align 8
  %163 = load i32, i32* %18, align 4
  %164 = zext i32 %163 to i64
  %165 = mul i64 %164, 8
  %166 = trunc i64 %165 to i32
  %167 = call i8** @av_fast_realloc(i8** %162, i32* %17, i32 %166)
  store i8** %167, i8*** %8, align 8
  %168 = load i8**, i8*** %8, align 8
  %169 = icmp ne i8** %168, null
  br i1 %169, label %176, label %170

170:                                              ; preds = %154
  %171 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %172 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %171, i32 0, i32 2
  %173 = call i32 @av_freep(i8*** %172)
  %174 = load i32, i32* @ENOMEM, align 4
  %175 = call i32 @AVERROR(i32 %174)
  store i32 %175, i32* %4, align 4
  br label %253

176:                                              ; preds = %154
  %177 = load i8**, i8*** %8, align 8
  %178 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %179 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %178, i32 0, i32 2
  store i8** %177, i8*** %179, align 8
  %180 = load i32, i32* %13, align 4
  %181 = icmp eq i32 %180, 0
  br i1 %181, label %182, label %191

182:                                              ; preds = %176
  %183 = load %struct.TYPE_29__*, %struct.TYPE_29__** %6, align 8
  %184 = call i8* @avio_rb32(%struct.TYPE_29__* %183)
  %185 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %186 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %185, i32 0, i32 2
  %187 = load i8**, i8*** %186, align 8
  %188 = load i32, i32* %11, align 4
  %189 = sext i32 %188 to i64
  %190 = getelementptr inbounds i8*, i8** %187, i64 %189
  store i8* %184, i8** %190, align 8
  br label %200

191:                                              ; preds = %176
  %192 = load %struct.TYPE_29__*, %struct.TYPE_29__** %6, align 8
  %193 = call i8* @avio_rb64(%struct.TYPE_29__* %192)
  %194 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %195 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %194, i32 0, i32 2
  %196 = load i8**, i8*** %195, align 8
  %197 = load i32, i32* %11, align 4
  %198 = sext i32 %197 to i64
  %199 = getelementptr inbounds i8*, i8** %196, i64 %198
  store i8* %193, i8** %199, align 8
  br label %200

200:                                              ; preds = %191, %182
  %201 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %202 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %201, i32 0, i32 2
  %203 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %202, i32 0, i32 0
  %204 = load i64, i64* %203, align 8
  %205 = icmp sge i64 %204, 0
  br i1 %205, label %206, label %219

206:                                              ; preds = %200
  %207 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %208 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %207, i32 0, i32 1
  %209 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %208, i32 0, i32 0
  %210 = load i64, i64* %209, align 8
  %211 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %212 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %211, i32 0, i32 2
  %213 = load i8**, i8*** %212, align 8
  %214 = load i32, i32* %11, align 4
  %215 = sext i32 %214 to i64
  %216 = getelementptr inbounds i8*, i8** %213, i64 %215
  %217 = load i8*, i8** %216, align 8
  %218 = getelementptr i8, i8* %217, i64 %210
  store i8* %218, i8** %216, align 8
  br label %219

219:                                              ; preds = %206, %200
  br label %220

220:                                              ; preds = %219
  %221 = load i32, i32* %11, align 4
  %222 = add nsw i32 %221, 1
  store i32 %222, i32* %11, align 4
  br label %142

223:                                              ; preds = %152
  %224 = load %struct.TYPE_29__*, %struct.TYPE_29__** %6, align 8
  %225 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %224, i32 0, i32 0
  %226 = load i64, i64* %225, align 8
  %227 = icmp ne i64 %226, 0
  br i1 %227, label %228, label %238

228:                                              ; preds = %223
  %229 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %230 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %229, i32 0, i32 0
  %231 = load i32, i32* %230, align 8
  %232 = load i32, i32* @AV_LOG_ERROR, align 4
  %233 = call i32 @av_log(i32 %231, i32 %232, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.5, i64 0, i64 0))
  %234 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %235 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %234, i32 0, i32 2
  %236 = call i32 @av_freep(i8*** %235)
  %237 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %237, i32* %4, align 4
  br label %253

238:                                              ; preds = %223
  %239 = load i32, i32* %14, align 4
  %240 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %241 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %240, i32 0, i32 0
  store i32 %239, i32* %241, align 8
  %242 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %243 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %242, i32 0, i32 1
  %244 = load i64, i64* %243, align 8
  %245 = icmp ne i64 %244, 0
  br i1 %245, label %246, label %252

246:                                              ; preds = %238
  %247 = load %struct.TYPE_28__*, %struct.TYPE_28__** %5, align 8
  %248 = load %struct.TYPE_26__*, %struct.TYPE_26__** %10, align 8
  %249 = load %struct.TYPE_29__*, %struct.TYPE_29__** %6, align 8
  %250 = load %struct.TYPE_27__*, %struct.TYPE_27__** %9, align 8
  %251 = call i32 @mov_parse_auxiliary_info(%struct.TYPE_28__* %247, %struct.TYPE_26__* %248, %struct.TYPE_29__* %249, %struct.TYPE_27__* %250)
  store i32 %251, i32* %4, align 4
  br label %253

252:                                              ; preds = %238
  store i32 0, i32* %4, align 4
  br label %253

253:                                              ; preds = %252, %246, %228, %170, %138, %126, %118, %111, %85, %76, %41, %30, %23
  %254 = load i32, i32* %4, align 4
  ret i32 %254
}

declare dso_local i32 @get_current_encryption_info(%struct.TYPE_28__*, %struct.TYPE_27__**, %struct.TYPE_26__**) #1

declare dso_local i32 @av_log(i32, i32, i8*) #1

declare dso_local i32 @avio_r8(%struct.TYPE_29__*) #1

declare dso_local i32 @avio_rb24(%struct.TYPE_29__*) #1

declare dso_local i8* @avio_rb32(%struct.TYPE_29__*) #1

declare dso_local i32 @MKBETAG(i8 signext, i8 signext, i8 signext, i8 signext) #1

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @FFMIN(i32, i32) #1

declare dso_local i32 @FFMAX(i32, i32) #1

declare dso_local i8** @av_fast_realloc(i8**, i32*, i32) #1

declare dso_local i32 @av_freep(i8***) #1

declare dso_local i8* @avio_rb64(%struct.TYPE_29__*) #1

declare dso_local i32 @mov_parse_auxiliary_info(%struct.TYPE_28__*, %struct.TYPE_26__*, %struct.TYPE_29__*, %struct.TYPE_27__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
